Company service create and list services, employee create and list employees is completed
