# api/docs/swagger.yaml
@@ -1,4 +1,230 @@
+definitions:
+  models.CompanyService:
+    properties:
+      company_id:
+        type: string
+      duration:
+        type: integer
+      guid:
+        type: string
+      price:
+        type: integer
+      title:
+        type: string
+    type: object
+  models.CompanyServiceCreate:
+    properties:
+      company_id:
+        type: string
+      duration:
+        type: integer
+      price:
+        type: integer
+      title:
+        type: string
+    type: object
+  models.CompanyServices:
+    properties:
+      count:
+        type: integer
+      services:
+        items:
+          $ref: '#/definitions/models.CompanyService'
+        type: array
+    type: object
+  models.Employee:
+    properties:
+      company_id:
+        type: string
+      description:
+        type: string
+      first_name:
+        type: string
+      graph_end_time:
+        type: string
+      graphStartTime:
+        type: string
+      guid:
+        type: string
+      last_name:
+        type: string
+      position:
+        type: string
+    type: object
+  models.EmployeeCreate:
+    properties:
+      company_id:
+        type: string
+      description:
+        type: string
+      first_name:
+        type: string
+      graph_end_time:
+        type: string
+      graphStartTime:
+        type: string
+      last_name:
+        type: string
+      position:
+        type: string
+    type: object
+  models.EmployeeList:
+    properties:
+      count:
+        type: integer
+      employees:
+        items:
+          $ref: '#/definitions/models.Employee'
+        type: array
+    type: object
+  models.ResponseError:
+    properties:
+      code:
+        type: string
+      message:
+        type: string
+    type: object
+  models.SuccessModel:
+    properties:
+      code:
+        type: integer
+      data: {}
+      message:
+        type: string
+    type: object
 info:
   contact: {}
-paths: {}
+paths:
+  /v1/company-service:
+    get:
+      consumes:
+      - application/json
+      description: API for get list company_services
+      parameters:
+      - description: company_id
+        in: query
+        name: company_id
+        required: true
+        type: string
+      - description: limit
+        in: query
+        name: limit
+        type: string
+      - description: page
+        in: query
+        name: page
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.CompanyServices'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/models.ResponseError'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/models.ResponseError'
+      summary: List Company Services
+      tags:
+      - company-service
+    post:
+      consumes:
+      - application/json
+      description: API for create company-service
+      parameters:
+      - description: company-service
+        in: body
+        name: employee
+        required: true
+        schema:
+          $ref: '#/definitions/models.CompanyServiceCreate'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.SuccessModel'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/models.ResponseError'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/models.ResponseError'
+      summary: Create Company Service
+      tags:
+      - company-service
+  /v1/employee:
+    get:
+      consumes:
+      - application/json
+      description: API for get list employeeslsls
+      parameters:
+      - description: company_id
+        in: query
+        name: company_id
+        required: true
+        type: string
+      - description: limit
+        in: query
+        name: limit
+        type: string
+      - description: page
+        in: query
+        name: page
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.EmployeeList'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/models.ResponseError'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/models.ResponseError'
+      summary: List Employee
+      tags:
+      - employee
+    post:
+      consumes:
+      - application/json
+      description: API for create company-service
+      parameters:
+      - description: employee
+        in: body
+        name: employee
+        required: true
+        schema:
+          $ref: '#/definitions/models.EmployeeCreate'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.SuccessModel'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/models.ResponseError'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/models.ResponseError'
+      summary: Create Employee
+      tags:
+      - employee
 swagger: "2.0"
